# AkitoBot

./: .env.example  .gitignore  CODEX_TASK.md  PLUGIN_MAINTENANCE.md  README.md  bot.py  pyproject.toml
.claude/: CLAUDE.md  VERSIONING.md
data/content/: gift_config.json  rpg_config.json
docs/: PROJECT_SPEC.md
nonebot_plugin_akito/: __init__.py
nonebot_plugin_akito/core/: __init__.py  api.py  context.py  data.py  game_store.py  life_state.py  memory.py  paths.py  retrieval.py  retrieval_assets.py  time_awareness.py
nonebot_plugin_akito/features/: __init__.py  bond_pages.py  bond_render.py  event_mode.py  gallery.py  gift.py  impression.py  random_keyword.py  random_paro.py  random_paro_render.py  scheduled.py  snowy.py  verify.py
nonebot_plugin_akito/features/_shared/: __init__.py
nonebot_plugin_akito/features/director/: __init__.py
nonebot_plugin_akito/features/event_mode/: __init__.py
nonebot_plugin_akito/features/gallery/: __init__.py
nonebot_plugin_akito/features/gift/: __init__.py  config.py  logic.py  pages.py  render.py
nonebot_plugin_akito/features/impression/: __init__.py
nonebot_plugin_akito/features/random_keyword/: __init__.py
nonebot_plugin_akito/features/random_paro/: __init__.py  render.py  stats.py  store.py  views.py
nonebot_plugin_akito/features/rpg/: GROWTH_BASELINE.md  README.md  __init__.py  boss.py  character.py  config.py  equipment.py  fortune.py  hunt.py  inventory.py  player.py  shop.py  smith.py  team.py
nonebot_plugin_akito/features/scheduled/: __init__.py
nonebot_plugin_akito/features/verify/: __init__.py
nonebot_plugin_akito/handlers/: __init__.py  chat.py  commands.py  reactions.py
nonebot_plugin_akito/templates/bond/: bond.html  bond_rank.html  my_bonds.html  rpg_help.html  world_boss_rank.html
nonebot_plugin_akito/templates/random_paro/: base.html  cook_rank.html  draw_result.html  profile.html  ranking.html
nonebot_plugin_gemini/: __init__.py
nonebot_plugin_gemini/core/: __init__.py  constants.py  context.py  data.py  life_state.py  memory.py
nonebot_plugin_gemini/features/: director.py  event_mode.py  gallery.py  impression.py  random_paro.py  scheduled.py  snowy.py
nonebot_plugin_gemini/handlers/: chat.py
tests/: README.md  conftest.py  test_api.py  test_chat_helpers.py  test_commands_helpers.py  test_context.py  test_data.py  test_director.py  test_fuzzy_match.py  test_gallery_helpers.py  test_gift.py  test_impression_helpers.py  test_impression_rescue_regression.py  test_life_state.py  test_paths.py  test_random_keyword_helpers.py  test_random_paro_draw_result.py  test_random_paro_helpers.py  test_random_paro_html_layout.py  test_retrieval.py  test_rpg.py  test_scheduled_helpers.py
tests/core/: test_api.py  test_context.py  test_data.py  test_life_state.py  test_memory.py  test_retrieval.py  test_time_awareness.py  test_vision.py
tests/features/event_mode/: test_event_mode.py
tests/features/gift/: helpers.py  test_admin.py  test_commands.py  test_logic.py  test_signin.py  test_steal.py
tests/features/impression/: test_rescue_regression.py
tests/features/random_keyword/: test_fuzzy_match.py
tests/features/random_paro/: test_backfill_tool.py  test_fuzzy_match.py  test_helpers.py  test_html_layout.py
tests/features/rpg/: helpers.py  test_boss.py  test_character.py  test_fortune.py  test_hunt.py  test_inventory.py  test_player.py  test_smith.py  test_team.py
tests/features/scheduled/: test_scheduled.py
tests/features/verify/: test_verify.py
tests/fixtures/test_data/: fanfic_keywords.json  keyword_draws.json  paro_pools.json  paro_stats.json
tests/fixtures/test_data/content/: akito_relationships.json  akito_routine.json  akito_scripts.json  akito_sleep.json  akito_songs.json  pjsk_knowledge.json  prompts_character.json  prompts_system.json  wl2_routine.json
tests/fixtures/test_data/persona/: akito_persona.txt  wl2_persona.txt
tests/handlers/: test_reactions.py
tools/: backfill_paro_stats.py  build_embeddings.py  classify_scripts.py  enrich_scripts.py  eval_retrieval.py  eval_set.json
