[project]
name = "akito_bot"
version = "0.1.0"
description = "akito_bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "nonebot-plugin-htmlrender>=0.3.0",
    "nonebot-plugin-alconna>=0.50.0",
    "nonebot-plugin-apscheduler>=0.4.0",
    "nonebot-plugin-uninfo>=0.7.0"
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
